// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`mocker mock() when example is of type INodeExternalExample generates a dynamic example 1`] = `
{
  "body": "test value",
  "headers": {
    "Content-type": "test",
  },
  "statusCode": 202,
}
`;

exports[`mocker mock() with valid negotiator response returns static example 1`] = `
{
  "body": "hello",
  "headers": {
    "Content-type": "test",
  },
  "statusCode": 202,
}
`;
